# Uae-pass-py

./: .gitignore  package-lock.json  package.json
backend/: .env.example  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/endpoints/: auth.py  oauth2.py  otp.py  registration.py  user.py
backend/app/core/: config.py  encryption.py  limiter.py  logging.py  masking.py  metrics.py  middleware.py  notification.py  redis.py  secrets_manager.py  security.py
backend/app/models/: __init__.py  audit.py  auth.py  base.py  credentials.py  user.py
backend/app/models/schemas/: auth.py  risk.py  user.py
backend/app/repositories/: user_repo.py
backend/app/services/: audit_monitor.py  audit_service.py  otp.py  risk_service.py  token_service.py  user_service.py
backend/certs/: private.pem  public.pem
backend/tests/: test_api_v1.py  test_audit.py  test_crypto.py  test_database.py  test_domain_logic.py  test_metrics.py  test_notification.py  test_oauth2.py  test_ratelimit.py  test_risk.py  test_security.py  test_security_suite.py
frontend/: middleware.ts  next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/otp/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/components/ui/: button.tsx  card.tsx  input.tsx
